[tool.poetry]
name = "freedom-gate"
version = "0.1.0"
description = ""
authors = ["None"]
license = "Free"
readme = "README.md"
packages = [{include = "freedom_gate"}]

[tool.poetry.dependencies]
python = "^3.9"
pyping = "^0.0.6"
pythonping = "^1.1.3"
ping3 = "^4.0.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
fake-useragent = "^0.1.11"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"
html5lib = "^1.1"
pymongo = "^4.2.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
